# netcheck

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/jdd/cwvs/com/netcheck/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cwvs/jdd/netcheck/: MainActivity.java  NetCheckActivity.java
app/src/main/java/com/cwvs/jdd/network/: NativeInterface.java
app/src/main/java/com/cwvs/jdd/network/analyse/: NetAnalyzer.java  NetPing.java  NetRouteTracer.java  NetSocket.java  NetUtils.java  Reporter.java
app/src/main/java/com/cwvs/jdd/uitls/network/: NetPing.java  NetRouteTracer.java  NetUtils.java
app/src/main/java/com/cwvs/jdd/utils/network/: NativeInterface.java  NetAnalyzer.java  NetPing.java  NetRouteTracer.java  NetSocket.java  NetUtils.java
app/src/main/java/com/netease/LDNetDiagnoService/: LDNetAsyncTaskEx.java  LDNetDiagnoService.java  LDNetSocket.java  LDNetTraceRoute.java
app/src/main/java/com/netease/LDNetDiagnoUtils/: LDNetUtil.java
app/src/main/java/com/task/: BaseTask.java  DnsTask.java  InfoTask.java  PingTask.java  TraceRouteContainer.java  TraceRouteWithPing.java  TraceTask.java
app/src/main/java/com/utils/: DatatypeConverter.java  DeviceUtils.java  FileUtil.java  FileUtils.java  ProxyUtils.java  SharedPreferenceUtils.java  X509ExtendedTrustManager.java  ZipUtils.java
app/src/main/java/com/utils/NetInfo/: NetBasicInfo.java  SystemBasicInfo.java
app/src/main/jni/: NativeInterface.h  Provider.c  Provider.h  hello.cpp  miniTelnet.c  tracepath.c
app/src/main/res/layout/: activity_main.xml  activity_net_check.xml
app/src/main/res/values/: strings.xml
app/src/test/java/jdd/cwvs/com/netcheck/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
